2009-07-17  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-about-retrieve): When type is `nil', decode cached
	contents to display source of 404 page.  Reported by Dan Jacobson
	<jidanni@jidanni.org>.

2009-07-04  Naohiro Aota  <naota@elisp.net>

	* w3m-search.el (w3m-search-thing-at-point-arg): New variable.
	(w3m-search-read-query): Use it.

	* w3m-util.el (w3m-current-title): Set title to "<retrieving>>" when
	w3m is retrieving a page.

2009-06-13  Kevin Ryde  <user42@zip.com.au>

	* w3m.el (w3m-view-recenter): Only nil,t,integer, not a cons.
	(w3m-search-name-anchor, w3m-view-this-url-1): No arg to w3m-recenter.
	(w3m-next-anchor, w3m-previous-anchor, w3m-next-form,
	w3m-previous-form, w3m-next-image, w3m-previous-image): Don't
	recenter, leave recentering just for following a link, not Tab etc
	within the buffer.
	(w3m-recenter): Remove NAME arg, believe don't need to differentiate
	URLs with an anchor or not since with no anchor `point' is at the
	start of the buffer and can't be recentered anyway.
	Use C-u style "(recenter '(4))" for the `t' middle-of-screen case.
	No need for code to avoid redisplay, `recenter' doesn't redisplay in
	the integer or C-u cases.

2009-06-13  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-fontify-anchors): Decode entities of name anchor.

2009-05-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-cache-available-p): Analyze the cache-control header more
	strictly.
	(w3m-scroll-up-or-next-url): Bind w3m-prefer-cache to `t' when goto
	the w3m-next-url.
	(w3m-scroll-down-or-previous-url): Bind w3m-prefer-cache to `t' when
	goto the w3m-previous-url.

2009-05-23  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-reload-this-page): Add new argument `no-popup'; Call
	w3m-goto-url() with the argument.
	(w3m-goto-url-with-timer): Use it.

2009-04-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bookmark.el (w3m-bookmark-make-item)
	* w3m-cookie.el (w3m-cookie-create)