@@ -3,6 +3,9 @@
 	* w3m.el (w3m-about-retrieve): When type is `nil', decode cached
 	contents to display source of 404 page.  Reported by Dan Jacobson
 	<jidanni@jidanni.org>.
+	(w3m-do-cleanup-temp-files): New customize variable.
+	(w3m-cleanup-temp-files): Use it.
+	(toplevel): Call it when emacs-w3m shutdown.
 
 2009-07-04  Naohiro Aota  <naota@elisp.net>
 
